--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "datasets>=3.2.0",
+    "hydra-core>=1.3.2",
+    "langdetect>=1.0.9",
+    "loguru>=0.7.3",
     "pre-commit>=4.1.0",
+    "pydantic>=2.10.6",
+    "python-dotenv>=1.0.1",
+    "ray>=2.41.0",
     "ruff>=0.9.3",
+    "typer>=0.15.1",
 ]
