--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,31 +4,27 @@ default_language_version:
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v4.6.0
     hooks:
-      - id: check-yaml
-      - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.4
     hooks:
-      - id: black
-        args:
-          - --config
-          - pyproject.toml
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        args: ["--profile", "black", "--filter-files"]
+      - id: ruff
+        name: "ruff lint"
+        files: "^backend/"
+      - id: ruff-format
+        name: "ruff format"
+        files: "^backend/"
+
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: "v1.2.0"
     hooks:
       - id: mypy
         # https://github.com/pre-commit/pre-commit/issues/2041
-        additional_dependencies: [types-requests, types-PyYAML==5.4.12, types-toml]
-  - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        additional_dependencies: [Flake8-pyproject]
+        additional_dependencies:
+          [types-requests, types-PyYAML==5.4.12, types-toml]
