--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "datasets>=3.2.0",
+    "huggingface-hub>=0.27.1",
     "hydra-core>=1.3.2",
     "langdetect>=1.0.9",
     "loguru>=0.7.3",
