--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,26 @@
 [project]
-name = "minions"
+name = "crammers"
 version = "0.1.0"
-description = "Add your description here"
+description = "Implement, train and fine-tune language models from scratch on consumer grade hardware."
 readme = "README.md"
 requires-python = ">=3.10"
+
 dependencies = [
     "datasets>=3.2.0",
     "huggingface-hub>=0.27.1",
     "hydra-core>=1.3.2",
     "langdetect>=1.0.9",
+    "lightning>=2.5.0.post0",
     "loguru>=0.7.3",
     "pre-commit>=4.1.0",
     "pydantic>=2.10.6",
     "python-dotenv>=1.0.1",
     "ray>=2.41.0",
     "ruff>=0.9.3",
+    "torch>=2.6.0",
     "typer>=0.15.1",
 ]
+
+
+[tool.setuptools]
+packages = ["crammers"]
