--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "loguru>=0.7.3",
     "pre-commit>=4.1.0",
     "pydantic>=2.10.6",
+    "pytest>=8.3.4",
     "python-dotenv>=1.0.1",
     "ray>=2.41.0",
     "ruff>=0.9.3",
